# tpg

./: .gitignore  LICENSE.txt  README.md  __init__.py  ansi.py  makefile  pyprogect.toml  pyproject.toml  setup.py  tpg.py
.github/workflows/: python-publish.yml
doc/: eng_README.md  mkdocs.yml
test/: Former.py  cirle.py  color.py  cursor_test.py  display_test.py  frame_test.py  line.py  list.py  manu_input.py  point_render.py  printf.py  ramka_test.py  rotation_box.py  settings_ui.py  test_json.json  test_log.py  test_yes_or_no.py  trigon_test.py
tpg/: __init__.py  ansi.py  console_tool.cpp  tpg.py
