[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "tpg"
version = "1.6.0"
description = "легкая библиотека для создания псевдо графических интерфейсов для терминала"
authors = ["hit<@HITHELL.com>"]
license = "MIT"
repository ="https://github.com/xHak2215/tpg"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = {version = "0.13.5", allow-prereleases = true}
pybind11 = {version = "3.0.1"}
psutil = {version = "7.1.3"}


[tool.poetry.extras]
docs = ["sphinx"]


